# Elgar-Game-Engine

./: .gitignore  Elgar3D.code-workspace  README.md
Engine/: CMakeLists.txt  Doxyfile  Elgar.doxy
Engine/elgar/: Engine.hpp
Engine/elgar/audio/: AudioBuffer.hpp  AudioListener.hpp  AudioSource.hpp
Engine/elgar/core/: AudioSystem.hpp  Exception.hpp  IO.hpp  InstanceCounter.hpp  Macros.hpp  Singleton.hpp  Utilities.hpp  Window.hpp
Engine/elgar/graphics/: Camera.hpp  ImageLoader.hpp  ImageStorage.hpp  MeshManager.hpp  MeshStorage.hpp  ModelLoader.hpp  Renderable.hpp  Renderer.hpp  Shader.hpp  ShaderManager.hpp  Sprite.hpp  Texture.hpp  TextureManager.hpp  TextureStorage.hpp
Engine/elgar/graphics/buffers/: BufferObject.hpp  FrameBufferObject.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp
Engine/elgar/graphics/data/: ASCII.hpp  AnimatedSprite.hpp  Image.hpp  Mesh.hpp  Model.hpp  RGBA.hpp  Renderable.hpp  Sprite.hpp  Texture.hpp  Vertex.hpp
Engine/elgar/graphics/gl/: RendererGL.hpp
Engine/elgar/graphics/groups/: RenderGroup.hpp  RenderLayer.hpp  TransformationGroup.hpp
Engine/elgar/graphics/renderers/: MeshRenderer.hpp  ModelRenderer.hpp  Renderer2D.hpp  SpriteRenderer.hpp  TextRenderer.hpp
Engine/elgar/graphics/sdl/: RendererSDL.hpp
Engine/elgar/graphics/shaders/: Basic.frag  Basic.vert  Scene.frag  Scene.vert  Text.frag  Text.vert
Engine/elgar/physics/: Interpolated.hpp  InterpolatedMovable.hpp  Movable.hpp  Rotatable.hpp  Scalable.hpp
Engine/elgar/timers/: FrameTimer.hpp  PerformanceTimer.hpp
Engine/html/: Engine_8cpp.html  Engine_8cpp__incl.map  Engine_8cpp__incl.md5  Engine_8hpp.html  Engine_8hpp__dep__incl.map  Engine_8hpp__dep__incl.md5  Engine_8hpp_source.html  annotated.html  classelgar_1_1Engine-members.html  classelgar_1_1Engine.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d59e2482cbdb5878d45d75053391ae04.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  namespaceelgar.html  namespaces.html
Engine/html/search/: all_0.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  searchdata.js
Engine/latex/: Engine_8cpp.tex  Engine_8cpp__incl.md5  Engine_8hpp.tex  Engine_8hpp__dep__incl.md5  annotated.tex  classelgar_1_1Engine.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d59e2482cbdb5878d45d75053391ae04.tex  files.tex  namespaceelgar.tex  namespaces.tex  refman.tex
Engine/src/: Engine.cpp
Engine/src/audio/: AudioBuffer.cpp  AudioListener.cpp  AudioSource.cpp
Engine/src/core/: AudioSystem.cpp  Exception.cpp  IO.cpp  Utilities.cpp  Window.cpp
Engine/src/graphics/: Camera.cpp  ImageLoader.cpp  MeshManager.cpp  ModelLoader.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  Sprite.cpp  Texture.cpp  TextureManager.cpp  TextureStorage.cpp
Engine/src/graphics/buffers/: BufferObject.cpp  FrameBufferObject.cpp  VertexArrayObject.cpp
Engine/src/graphics/data/: Mesh.cpp  Model.cpp  RGBA.cpp  Renderable.cpp  Sprite.cpp  Texture.cpp  Vertex.cpp
Engine/src/graphics/renderers/: MeshRenderer.cpp  ModelRenderer.cpp  Renderer2D.cpp  SpriteRenderer.cpp  TextRenderer.cpp
Engine/src/physics/: Interpolated.cpp  InterpolatedMovable.cpp  Movable.cpp  Rotatable.cpp  Scalable.cpp
Engine/src/timers/: FrameTimer.cpp  PerformanceTimer.cpp
Test Project/: CMakeLists.txt  TestProject
Test Project/src/: main.cpp
